# verdict

./: .databrickscfg.example  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  databricks.yml  mlflow.db  pyproject.toml  requirements.txt  setup_azure.sh
config/: base.yaml  config.yaml  development.yaml  production.yaml  staging.yaml
dashboard/: verdict_dashboard.sql
notebooks/: __init__.py  create_sample_dataset.ipynb  create_sample_dataset.py  init_catalog.ipynb  init_catalog.py  init_run.ipynb  run_evaluation.ipynb  run_evaluation.py  run_inference.ipynb  run_inference.py  run_regression.ipynb  run_regression.py  run_testgen.ipynb  run_testgen.py  send_alert.ipynb  send_alert.py
orchestration/: verdict_workflow.yaml
src/verdict/: __init__.py
src/verdict/data/: __init__.py  prompt_dataset.py
src/verdict/evaluation/: __init__.py  custom_judges.py  deterministic_metrics.py  mlflow_evaluator.py
src/verdict/inference/: __init__.py  inference_runner.py
src/verdict/orchestration/: __init__.py  config_loader.py  run_context.py
src/verdict/regression/: __init__.py  regression_detector.py
src/verdict/setup/: __init__.py  init_catalog.py
src/verdict/testgen/: __init__.py  chunks_metadata.py  config.py  exporters.py  generate_dataset.py  qdrant_sampler.py  synthesizer.py
tests/: __init__.py  test_deterministic_metrics.py  test_regression_detector.py
