[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verdict"
version = "0.1.0"
description = "Production-grade LLMOps Evaluation Framework on Azure Databricks"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Verdict Team", email = "connect@kevin.fsames.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.10"
dependencies = [
    "pyspark>=3.5.0",
    "mlflow>=2.10.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "rouge-score>=0.1.2",
    "azure-identity>=1.15.0",
    "azure-keyvault-secrets>=4.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "types-PyYAML>=6.0.0",
    "types-requests>=2.31.0",
]
testgen = [
    "qdrant-client>=1.9.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "openai>=1.30.0",
    "pydantic-settings>=2.0.0",
    "datasets>=2.19.0",
    "tqdm>=4.66.0",
]

[project.scripts]
verdict-init = "verdict.setup.init_catalog:main"
verdict-inference = "verdict.inference.inference_runner:main"
verdict-evaluate = "verdict.evaluation.mlflow_evaluator:main"
verdict-judge = "verdict.evaluation.custom_judges:main"
verdict-regression = "verdict.regression.regression_detector:main"
verdict-testgen = "verdict.testgen.generate_dataset:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["verdict*"]

[tool.setuptools.package-data]
verdict = ["py.typed"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = ["numpy.typing.mypy_plugin"]

[[tool.mypy.overrides]]
module = [
    "pyspark.*",
    "mlflow.*",
    "scipy.*",
    "qdrant_client.*",
    "langchain.*",
    "langchain_openai.*",
    "datasets.*",
    "tqdm.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["verdict"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["src/verdict"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]